@@ -1,5 +1,9 @@
 2002-09-23  Junichi Uekawa  <dancer@debian.org>
 
+	* tests/param-cn4.sh: use ${bindir} variable, because full path of dsh changes
+
+	* Makefile.am (TESTS_ENVIRONMENT): specify bindir=$(bindir) for use.
+
 	* Makefile.am (SUBDIRS): remove tests from SUBDIRS
 	(EXTRA_DIST): extra dist for tests is done with the main Makefile.am
 
